release: publish Aurora v1.5.0
